<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/log_out"
            android:textColor="@color/darkishPink"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_logout"
            app:drawableTint="@color/darkishPink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:textColor="@color/blueMain"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogout"
            tools:text="Maria" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_score"
            android:backgroundTint="@color/paleGrey">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@drawable/ic_profile_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnSignInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/wageCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSignInHealthConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackgroundBorderless">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_health_connect"
                android:drawablePadding="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="16dp"
                android:text="Sign in with Health Connect"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/wageCL"
                android:layout_width="104dp"
                android:layout_height="84dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_score"
                android:backgroundTint="@color/lightTeal"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editWageIV"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|top"
                    android:fontFamily="@font/montserrat_bold"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_edit"
                    android:tint="@color/white"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/wageIV"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_wage"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/wageTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_black"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:text="57 kg" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ageCL"
                android:layout_width="104dp"
                android:layout_height="84dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_score"
                android:backgroundTint="@color/lightTeal"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ageWageIV"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="end|top"
                    android:fontFamily="@font/montserrat_bold"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_edit"
                    android:tint="@color/white"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ageIV"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/ageTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_black"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:text="22 y.o." />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/background_score"
            android:backgroundTint="@color/paleGrey"
            android:padding="20dp">

            <TextView
                android:id="@+id/goalsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:text="@string/your_goals"
                android:textColor="@color/softPurple"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/updateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/nunito_black"
                android:gravity="center"
                android:text="@string/update_lowercase"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/stepsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_profile_step"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:textColor="@color/greyishBrown"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goalsTV"
                tools:text="Steps: 10000" />

            <TextView
                android:id="@+id/sleepTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_profile_sleep"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:textColor="@color/greyishBrown"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stepsTV"
                tools:text="Sleep: 4 h" />

            <TextView
                android:id="@+id/activityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_profile_activity"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:textColor="@color/greyishBrown"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sleepTV"
                tools:text="Activity: 2 h" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>